--- a/estilos.css
+++ b/estilos.css
@@ -6,22 +6,22 @@ body {
 
     font-family: Tahoma, sans-serif;
 
-    color: #595959;
+    color: #000000;
     background-color: #fff;
     
     padding: 2em;
   
     margin: 0em;
   
-    border-left: 1em solid #3FF2BD;
+    border-left: 1em solid #f2953f;
   
-    border-right: 1em solid #3FF2BD;
+    border-right: 1em solid #f2953f;
 }
 
 /*Especificidad: 001*/
 h1 {
-    color: rgb(58, 82, 218);    
-    background-color:#d1d1d1; 
+    color: #000000;    
+    background-color:#f8b385; 
     border-radius: 0.75em;
     
     text-transform: uppercase;
@@ -35,8 +35,8 @@ h1 {
 
 /*Especificidad: 001*/
 h2 {
-    color: rgb(58, 82, 218);    
-    background-color:#d1d1d1; 
+    color: #000000;    
+    background-color:#f8b385; 
     border-radius: 0.35em;
     
     padding: .65em; 
@@ -52,7 +52,7 @@ img {
 }
 
 /*Especificidad: 001*/
-article {
+section {
     display: block;
     border: 0.25em solid rgba(0, 0, 0, 0.39);
     border-radius: 0.75em;
